--- a/css/shortcode/header.css
+++ b/css/shortcode/header.css
@@ -286,7 +286,7 @@ nav.off__canvars--menu ul li ul li a:hover {
 .sticky__header.scroll-header {
   -webkit-animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
           animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
-  background: rgba(246, 246, 248, 0.9) none repeat scroll 0 0;
+  background: rgba(255, 255, 255) none repeat scroll 0 0;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   left: 0;
   margin: 0 auto;
